# win_notice_lite

./: BREAKING.md  Cargo.toml  pyproject.toml  readme.md  readme_cn.md
doc/en/About_Event_Notification/: Explanation.md
doc/en/PythonAPI/: Explanation.md
doc/zh-hans/About_Event_Notification/: Explanation.md
doc/zh-hans/PythonAPI/: Explanation.md
src/modules/: listener.rs  mod.rs
src/modules/implements/: diff_tool.rs
src/modules/implements/events/features/: polling_eventify.rs
src/modules/types/: diff.rs  listener.rs  mod.rs  mutable_toast.rs  serialize_format.rs  toast.rs
src/modules/types/events/features/: events_type.rs  polling_eventify.rs
src/modules/utils/: notification_tools.rs
win_notice_lite/: __init__.py
